# Superlist

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: issue-translator.yml
functional_tests/: tests.py
lists/: tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
lists/templates/: base.html  home.html  list.html
superlists/: settings.py  urls.py
tests/: functional_tests.py
